# computer_vision

./: CMakeLists.txt  README.md  classifierFashion.cpp  classifierFashion.h  container.h  main.cpp  readerMNIST.cpp  readerMNIST.h
.github/workflows/: release.yml
